--- a/LightBall-Interface/home.html
+++ b/LightBall-Interface/home.html
@@ -8,109 +8,91 @@
     <script src="https://kit.fontawesome.com/da7fdceb5d.js" crossorigin="anonymous"></script>
 </head>
 
-<body onload="init()">
+<body>
     <div class="main">
 
         <!-- <audio src="example.mp3" id="musicPlayer"></audio> -->
 
-        <audio id="musicPlayer">
-            <source src="example.mp3">
-        </audio>
+        <!-- <audio id="musicPlayer"> -->
+        <!-- <source src="example.mp3"> -->
+        <!-- </audio> -->
 
+        <!-- <form action="upload.php" method="post" enctype="multipart/form-data">
+            <input type="file" name="my_file">
+            <input type="submit" value="Upload">
+        </form> -->
 
-        <!-- <div class="area">
-            <div class="block">
-                <p id="test">test</p>
-            </div>
-        </div> -->
-
-
-        <!-- top left -->
+        <!-- top -->
         <div class="area a1">
+
             <div class="block">
-                <div class="item">
-                    <h1 class="block-title">effect option</h1>
-                    <div class="sblock">
-                        <li>effect1</li>
-                        <li>effect2</li>
-                        <li>effect3</li>
-                        <li>effect4</li>
-                    </div>
+                <h1 class="block-title">effect option</h1>
+                <div class="sblock">
+                    <li onclick="selectEffect(this,0)">effect1</li>
+                    <li onclick="selectEffect(this,1)">effect2</li>
+                    <li onclick="selectEffect(this,2)">effect3</li>
+                    <li onclick="selectEffect(this,3)">effect4</li>
                 </div>
-                <input type="button" value="ADD EFFECT" class="btn">
+                <input type="button" value="ADD EFFECT" class="btn" onclick="addEffect()">
             </div>
 
             <div class="block">
-                <div class="item">
-                    <h1 class="block-title">effect list</h1>
-                    <div class="sblock">
-                        <li>effect1</li>
-                        <li>effect2</li>
-                        <li>effect3</li>
-                        <li>effect4</li>
-                    </div>
+                <h1 class="block-title">effect list</h1>
+                <div class="sblock" id="effect-list">
+
                 </div>
             </div>
 
-            <div class="block">
-                <div class="item">
-                    <h1 class="block-title">keypoint list</h1>
-                    <div class="sblock">
-                        <li id="keypoint">effect1</li>
-                        <li>effect2</li>
-                        <li>effect3</li>
-                        <li>effect4</li>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- top middle -->
-        <div class="area a2">
-            <div class="block">
-                <h1 class="block-title">Global Configuration</h1>
-            </div>
             <div class="block">
                 <h1 class="block-title">Effect Settings</h1>
+                <div class="sblock">
+                    <span id="effecttype"><input type="text" id="typeinput" value=""></span>
+                    <span id="effectstart"><input type="text" id="startinput" value=""></span>
+                    <span id="effectend"><input type="text" id="endinput" value=""></span>
+                    <span id="effectcolor"><input type="color" id="colorinput" value="#ffffff"></span>
+                </div>
             </div>
-        </div>
 
-        <!-- top right -->
-        <div class="area a3">
             <div class="block">
-                <h1 class="block-title">Effect atuo generation</h1>
+                <p id="test"></p>
             </div>
-            <div class="block">
-                <h1 class="block-title">Keypoint Starting color</h1>
-            </div>
-        </div>
 
+        </div>
 
 
         <!-- bottom -->
-        <div class="area a4">
+        <div class="area a2">
             <div class="music-player">
+                <div class="current-time">
+                    <i>select time :</i>
+                    <i id="selecttime">0</i>
+                </div>
+
                 <i class="fas fa-backward btn" onclick="playBackward()" title="倒退"></i>
-                <i class="fas fa-play btn" onclick="playMusic()" title="播放"></i>
-                <i class="fas fa-pause btn" onclick="pauseMusic()" title="暫停"></i>
+                <i class="fas fa-play btn" onclick="playMusic()" title="播放" id="playandpause"></i>
                 <i class="fas fa-stop btn" onclick="stopMusic()" title="停止"></i>
                 <i class="fas fa-forward btn" onclick="playForward()" title="快進"></i>
-                <i class="fas fa-music btn" onclick="playerFast()" title="加速"></i>
-                <i class="fas fa-clock" id="time"> 123</i>
+                <i class="fas fa-volume-up btn" onclick="changeVolume()" title="音量"></i>
+
+                <div class="music-time">
+                    <i class="fas fa-clock"></i>
+                    <i id="time">0</i>
+                </div>
             </div>
 
-            <!-- <div class="waver">
-                <input type="text" placeholder="WaveRenderer">
+            <div id="waveform" class="waveform"></div>
+            <!-- <div class="waver-player" id="canvas">
+                <canvas id="tCanvas" width="800" height="10"></canvas>
+                <canvas id="wCanvas" width="800" height="200"></canvas>
             </div> -->
-            <div class="waver-player">
-                <canvas id="time-point" height="10"></canvas>
-                <canvas id="waver" width="800" height="200" onclick="getTimePoint()"></canvas>
-            </div>
         </div>
+
+
 
     </div>
     <script src="script.js"></script>
-    <script src="canvas.js"></script>
+    <script src="wave.js"></script>
+    <script src="audio_.js"></script>
 </body>
 
 </html>
